# InsectClassifier_USDA_SHSU

./: LICENSE  README.md  pyproject.toml  streamlit_app.py
src/annotated_images/: app_support.py  cli.py  dataset_cleanup.py  fasterrcnn.py  metrics.py  orchestrator.py  prepare.py  types.py  ultralytics_pipeline.py  utils.py  visualization.py  voc.py
